--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello GitHub Pages</title>
+    <title>Monkey</title>
     <link href="site.css" media="screen" rel="stylesheet" type="text/css" />
-    <script src="site.js" type="text/javascript"></script>
   </head>
   <body>
-    <h1 class="party">Hello GitHub Pages</h1>
-    <p>It's time to <strong class="party">publish some pages.</strong></p>
+    <img src="https://media.makeameme.org/created/fresh-monkey-das.jpg" style="width:100%;height:100%;"/>
   </body>
 </html>
